change in package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "n11s1-guessing_number",
+  "name": "saqlain021-guessing_number",
   "version": "1.0.0",
   "description": "you can guess your number here.",
   "main": "index.js",
